tests/snapshots/normalize__insta_no_normalize_accented_item@001.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"tea\"]\noptions: "
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  tea                                                                           "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
