tests/snapshots/normalize__insta_no_normalize_accented_item@002.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"tea\"]\noptions: \nafter:\n  @type \"cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> cafe                                                                          "
"  1/3                                                                        0/0"
"> cafe                                                                          "
cursor: (24, 7)
