tests/snapshots/normalize__insta_normalize_accented_item_unaccented_query-2.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe                                                                          "
"> café                                                                          "
"  2/3                                                                        0/0"
"> cafe                                                                          "
cursor: (24, 7)
