tests/snapshots/normalize__insta_normalize_accented_item_unaccented_query.snap
---
source: tests/normalize.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  tea                                                                           "
"  cafe                                                                          "
"> café                                                                          "
"  3/3                                                                        0/0"
">                                                                               "
