tests/snapshots/normalize__insta_normalize_accented_item_unaccented_query@002.snap
---
source: tests/normalize.rs
description: "input: items [\"café\", \"cafe\", \"tea\"]\noptions: --normalize\nafter:\n  @type \"cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe                                                                          "
"> café                                                                          "
"  2/3                                                                        0/0"
"> cafe                                                                          "
cursor: (24, 7)
