tests/snapshots/normalize__insta_normalize_case_insensitive.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe                                                                          "
"  café                                                                          "
"  CAFE                                                                          "
"> Café                                                                          "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
