tests/snapshots/normalize__insta_normalize_case_insensitive@001.snap
---
source: tests/normalize.rs
description: "input: items [\"Café\", \"CAFE\", \"café\", \"cafe\"]\noptions: --normalize --case ignore"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe                                                                          "
"  café                                                                          "
"  CAFE                                                                          "
"> Café                                                                          "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
