tests/snapshots/normalize__insta_normalize_case_insensitive@002.snap
---
source: tests/normalize.rs
description: "input: items [\"Café\", \"CAFE\", \"café\", \"cafe\"]\noptions: --normalize --case ignore\nafter:\n  @type \"cafe\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  cafe                                                                          "
"  café                                                                          "
"  CAFE                                                                          "
"> Café                                                                          "
"  4/4                                                                        0/0"
"> cafe                                                                          "
cursor: (24, 7)
