tests/snapshots/normalize__insta_normalize_combined_chars-2.snap
---
source: tests/normalize.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  senor                                                                         "
"> señor                                                                         "
"  2/4                                                                        0/0"
"> senor                                                                         "
cursor: (24, 8)
